temporal-verifier/tests/examples/snapshots/fail/sorts/sort_inference_but_still_wrong.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/sort_inference_but_still_wrong.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: init does not imply invariant
 = counter example:


