temporal-verifier/tests/examples/snapshots/fail/sorts/unknown_variable.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/unknown_variable.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: unknown variable/constant x
  ┌─ tests/examples/fail/sorts/unknown_variable.fly:5:1
  │
5 │ assert forall y:s. x = y
  │ ^^^^^^^^^^^^^^^^^^^^^^^^


